タイトルを「ReactとFramer Motionで作るWebアニメーション入門」に修正

--- a/books/framer-motion-handson-book/config.yaml
+++ b/books/framer-motion-handson-book/config.yaml
@@ -1,4 +1,4 @@
-title: ReactとFramer Motionで作るWebアニメーション
+title: ReactとFramer Motionで作るWebアニメーション入門
 summary: ReactとFramer Motionを使って、魅力的なWebアニメーションを手軽に実装する方法を学びます。初心者から中級者向けのハンズオン形式で、実際のプロジェクトを通じてスキルを磨きましょう。
 topics: ["React", "Framer Motion", "Animation", "UI", "JavaScript"]
 published: true
